lab1/Test/L1-A-10-14.output
Error Type A at Line 10
Error Type A at Line 11
Error Type B at Line 62
Error Type A at Line 63
Error Type A at Line 68
